@@ -4,7 +4,7 @@ PACKAGE=libxklavier
 MAJOR_VERSION=3
 MINOR_VERSION=6
 VERSION=$MAJOR_VERSION.$MINOR_VERSION
-VERSION_INFO=12:0:0
+VERSION_INFO=13:0:1
 
 AC_SUBST(MAJOR_VERSION)
 AC_SUBST(MINOR_VERSION)
@@ -157,6 +157,22 @@ AC_SUBST(GLIB_CFLAGS)
 
 AC_SUBST(CFLAGS)
 AC_SUBST(LDFLAGS)
+
+dnl -----------------------------------------------------------
+dnl ISO codes
+dnl -----------------------------------------------------------
+AC_MSG_CHECKING([whether iso-codes exists])
+if $PKG_CONFIG iso-codes > /dev/null ; then
+   AC_MSG_RESULT([yes])
+   iso_codes_prefix=`$PKG_CONFIG --variable=prefix iso-codes`
+   iso_codes_pkgconfig=iso-codes
+   have_iso_codes=yes
+else
+   AC_MSG_RESULT([no])
+   AC_MSG_ERROR([You must have iso-codes.])
+fi
+
+AC_DEFINE_UNQUOTED([ISO_CODES_PREFIX],["$iso_codes_prefix"],[ISO codes prefix])
 
 AC_OUTPUT([
 Makefile
